[project]
name = "set_proxy"
dynamic = ["version"]
description = "a network checker and proxy setter"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
indent-width = 2

[tool.pdm.version]
source = "file"
path = "src/set_proxy/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
